--- a/0524_02_Cutting Anilove/CuttingAnilove.css
+++ b/0524_02_Cutting Anilove/CuttingAnilove.css
@@ -62,14 +62,14 @@ header{
 .NavArea{
     display: flex;
     flex-wrap: wrap;
-    width: 1280px;
+    width: 100%;
     height: 100px;
     background-color: #fff;
     margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
+    position: fixed;
 }
 .NavLeft{
    display: flex;
