--- a/0524_02_Cutting Anilove/CuttingAnilove.css
+++ b/0524_02_Cutting Anilove/CuttingAnilove.css
@@ -6,7 +6,7 @@ header{
     width: 100%;
 } */
 .header{
-    width: 1280px;
+    width: 1380px;
     height: 80px;
     margin: auto;
     background-color: #1c1c1c;
@@ -59,32 +59,42 @@ header{
     background-color:coral;
     transition: 0.5s;
 }
+.NavArea-bg{
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+    position: sticky;
+    top: 0;
+    
+}
+
 .NavArea{
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 1380px;
     height: 100px;
     background-color: #fff;
     margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
+
+    
 }
 .NavLeft{
    display: flex;
-   font-size: 40px;
-   color: rgb(62, 62, 62); 
-   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-size: 50px;
+   font-weight: 700;
+   font-family:serif;
    align-items: center;
-   padding-left: 30px;
 }
+
 .logo{
     padding: 15px;
 }
 .Name{
     text-decoration: none;
-    color:#1c1c1c;
+    color:#4b4b4b;
 }
 
 .NavMeddle{
@@ -182,9 +192,13 @@ header{
 .button-01:hover{
     background-color: #000;
 }
+.main-page-02-bg{
+    width: 100%;
+    background-color: #fff;
+
+}
 .main-page-02{
-    width: 1280px;
-    
+    width: 1380px; 
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -192,19 +206,18 @@ header{
 }
 .pic{
     height: 800px;
-    width: 40%;
-    margin-right: 10px;
+    width: 50%;
+    background-image: url(./HW02Assets/asset\ 1.jpeg);
 }
 
 .main-page-02-text{
-    width: calc(50% - 30px);
-    margin: 15px;
+    width: 50%;
     padding: 50px;
+    line-height: 1.5;
     box-sizing:border-box;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
-    /* background-color: #fa1; */
 }
 
 .main-page-02-text .sentence-01{
@@ -233,7 +246,6 @@ header{
 .main-page-03{
     width: 100%;
     height: 800px; 
-    justify-content: space-between;
     background-color: #f8f6f6;
     text-align: center ;
     
@@ -247,6 +259,7 @@ header{
 .main-page-03-text .sentence-02{
     color: cornflowerblue;
     font-size: 40px;
+    line-height: 1.5;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
