--- a/0605_01_Cutting Toyota/Style.css
+++ b/0605_01_Cutting Toyota/Style.css
@@ -1,23 +1,23 @@
 H1{
     writing-mode: vertical-lr;
     color: white;
-    font-size: 100px;
+    font-size: 90px;
     font-weight: 100;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 H2{
     color: white;
-    font-size: 45px;
+    font-size: 40px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 30px 10px;
     margin: auto;
 }
 H3{
     color: aliceblue;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 800;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 25px 15px 10px;
+    padding: 15px 0px 5px;
 }
 H4{
     color:rgb(180, 0, 35);
@@ -32,46 +32,40 @@ H5{
     font-weight: 800;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 5px;
-    border-radius: 3px;
-    background-color: #000;
+    border-radius: 5px;
+    background-color: #222;
     display: inline;
 }
 p{
     color:aliceblue;
-    font-size: 18px;
+    font-size: 17px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding-left: 15px;
+    padding: 1px;
     line-height: 1.6;
+    text-align: justify;
 }
 .card{
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    width: 1100px;
+    width: 920px;
     justify-content:space-between;
     position: relative;
     padding: 20px;
-    /* background-color: #fa0;
-    border: #000 solid 2px; */
+    /* background-color: #fa0; */
+    border: #000 solid 2px;
 }
 .card:nth-child(even){
     flex-direction:row-reverse;
 }
 .text-box-01{
     display: block;
-    width: 300px;
+    width: 280px;
     padding: 10px;
     z-index: 6;
     
 }
-.text-box-01:nth-child(odd){
-    display:block;
-    width: 300px;
-    padding: 10px;
-    z-index: 3;
-    margin-right:45px;
-    
-}
+
 
 .item{
     background:rgb(180, 0, 35);
@@ -83,7 +77,8 @@ p{
 .content{
     background: #000;
     display: block;
-    padding-bottom: 40px;
+    padding: 10px;
+    padding-bottom: 20px;
     /* flex-wrap: wrap; */
 }
 .makeup{
@@ -101,50 +96,73 @@ p{
     height: 360px;
     background-color: #eee;
     margin-top: 50px;
-    margin-right: 200px;
+    margin-right: 100px;
     z-index: 0;
 }
-
-img{
-    position: absolute;
-    top:135px;
-    left: 150px;
+.pic-area{
+    width: 1100px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-img:nth-child(2){
+.main-pic{
     position: absolute;
-    /* top:135px; */
-    left:30px;
+    top:130px;
+    left: 180px;
+}
+
+.card:nth-child(even) .main-pic{
+    position: absolute;
+    top:130px;
+    left: 40px;
     z-index: 3;
 }
-svg{
-    position: relative;
-    top: 300px;
-    right: 250px;
+
+.yticon{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 330px;
+    right: 70px;
+    z-index: 3;
 }
-svg:nth-child(even){
-    position: relative;
-    top: 300px;
-    left: 110px;
+.card:nth-child(even) .yticon{
+    position: absolute;
+    top:330px;
+    left: 30px;
+    z-index: 3;
 }
+
 .text-box-02{
-    width: 600px;
-    padding: 20px;
+    width: 580px;
+    padding: 20px 10px 10px;
     background-color: #eee;
-    margin: 176px 50px 50px;
+    margin: 210px 80px 10px;
     z-index: 3;
 }
-.text-box-02:nth-child(even){
-    width: 600px;
-    padding: 20px;
-    background-color: #eee;
-    margin: 176px 0px 50px 0px;
+/* .card:nth-child(even) .text-box-02{
+    margin: 
+    z-index: 3;
+} */
+
+.confort .text-box-02{
+    margin: 185px 10px 20px;
     z-index: 3;
 }
 
+/* .humanity .text-box-02{
+    position: relative;
+    top:-50px;
+    z-index: 3;
+} */
+
+.humanity .text-box-02{
+    margin: 160px 10px 20px;
+    z-index: 3;
+}
 
 H4::after{
-    content: '1111111111111111111111111111111111111111';
+    content: '11111111111111111111111111111111111';
     text-decoration:line-through solid rgb(180, 0, 35) 2px;
     color: #eee;
     margin-left: 5px;
@@ -161,7 +179,7 @@ H4::after{
 .text-box-02 p::before{
     content: '\2022';
     color: red;
-    margin-left: -13px;
+    margin-left: -11px;
     margin-right: 5px;
 
 }
